--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@
     --popover-foreground: 20 14.3% 4.1%;
     --primary: 24.6 95% 53.1%;
     --primary-foreground: 60 9.1% 97.8%;
+    --spring-green: 24.6 95% 53.1%;
     --secondary: 60 4.8% 95.9%;
     --secondary-foreground: 24 9.8% 10%;
     --muted: 60 4.8% 95.9%;
@@ -46,6 +47,7 @@
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
     --ring: 20.5 90.2% 48.2%;
+    --spring-green: 24.6 95% 53.1%;
   }
 }
 
