--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
+    --badge-green: 110 52.4% 69.5%;
     --foreground: 20 14.3% 4.1%;
     --card: 0 0% 100%;
     --card-foreground: 20 14.3% 4.1%;
@@ -58,5 +59,11 @@
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+  }
+  .bg-green-500 {
+    background-color: hsl(140, 70%, 40%); /* Adjust color as needed */
+  }
+  .custom-scrollbar::-webkit-scrollbar {
+    @apply scrollbar; /* Apply the scrollbar styles */
   }
 }
