--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,3 +128,29 @@
 *::-webkit-scrollbar-thumb:active {
   background-color: var(--scrollbar-thumb-active) !important;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 0.4444s ease-in-out;
+}
+
+.animate-fade-out {
+  animation: fadeOut 0.4444s ease-in-out;
+}
