--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,73 +5,47 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --badge-green: 110 52.4% 69.5%;
-    --foreground: 20 14.3% 4.1%;
+    --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
-    --card-foreground: 20 14.3% 4.1%;
+    --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
-    --popover-foreground: 20 14.3% 4.1%;
-    --primary: 24.6 95% 53.1%;
-    --primary-foreground: 60 9.1% 97.8%;
-    --spring-green: 24.6 95% 53.1%;
-    --secondary: 60 4.8% 95.9%;
-    --secondary-foreground: 24 9.8% 10%;
-    --muted: 60 4.8% 95.9%;
-    --muted-foreground: 25 5.3% 44.7%;
-    --accent: 60 4.8% 95.9%;
-    --accent-foreground: 24 9.8% 10%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 60 9.1% 97.8%;
-    --border: 20 5.9% 90%;
-    --input: 20 5.9% 90%;
-    --ring: 24.6 95% 53.1%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 5.9% 10%;
     --radius: 0.5rem;
-    --code: rgb(0, 0, 0) (255, 0, 0);
-    --code-foreground: #f4f4f5;
-    --code--highlighted: rgb(240, 240, 240);
-    --copy-button-background: rgb(255, 255, 255);
-    --scrollbar-track: rgb(248, 248, 248);
-    --scrollbar-track-border: rgb(242, 242, 242);
-    --scrollbar-track-hover: rgb(240, 240, 240);
-    --scrollbar-track-active: rgb(244, 244, 244);
-    --scrollbar-thumb: rgba(170, 112, 79, 0.874);
-    --scrollbar-thumb-hover: rgba(170, 112, 79, 0.974);
-    --scrollbar-thumb-active: rgba(170, 112, 79, 0.974);
-    --rainbow-background: rgba(0, 0, 0, 0.16);
   }
 
   .dark {
-    --background: 20 14.3% 4.1%;
-    --foreground: 60 9.1% 97.8%;
-    --card: 20 14.3% 4.1%;
-    --card-foreground: 60 9.1% 97.8%;
-    --popover: 20 14.3% 4.1%;
-    --popover-foreground: 60 9.1% 97.8%;
-    --primary: 20.5 90.2% 48.2%;
-    --primary-foreground: 60 9.1% 97.8%;
-    --secondary: 12 6.5% 15.1%;
-    --secondary-foreground: 60 9.1% 97.8%;
-    --muted: 12 6.5% 15.1%;
-    --muted-foreground: 24 5.4% 63.9%;
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 60 9.1% 97.8%;
-    --destructive: 0 72.2% 50.6%;
-    --destructive-foreground: 60 9.1% 97.8%;
-    --border: 12 6.5% 15.1%;
-    --input: 12 6.5% 15.1%;
-    --ring: 20.5 90.2% 48.2%;
-    --spring-green: 24.6 95% 53.1%;
-    --code: rgb(255, 255, 255);
-    --code-foreground: #18181b;
-    --code-highlighted: rgb(17, 17, 17);
-    --copy-button-background: rgb(17, 17, 17);
-    --scrollbar-track: #09090b;
-    --scrollbar-track-border: #1b1b1f;
-    --scrollbar-track-hover: #0b0b0c;
-    --scrollbar-track-active: #050507;
-    --scrollbar-thumb: rgb(62, 62, 62);
-    --scrollbar-thumb-hover: rgb(68, 68, 68);
-    --scrollbar-thumb-active: rgb(66, 66, 66);
+    --background: 240 10% 3.9%;
+    --foreground: 0 0% 98%;
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 240 5.9% 10%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 240 4.9% 83.9%;
   }
 }
 
@@ -88,14 +62,14 @@
   }
 }
 
-/* Firefox */
+/* Firefox
 * {
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb) !important;
-}
+} */
 
 /* Chrome, Edge and Safari */
-*::-webkit-scrollbar {
+/* *::-webkit-scrollbar {
   width: 10px;
   width: 10px;
 }
@@ -127,7 +101,7 @@
 
 *::-webkit-scrollbar-thumb:active {
   background-color: var(--scrollbar-thumb-active) !important;
-}
+} */
 
 @keyframes fadeIn {
   from {
