Make favorites scrollable

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,10 +63,10 @@
 }
 
 /* Firefox
-* {
+ {
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb) !important;
-} */
+} 
 
 /* Chrome, Edge and Safari */
 /* *::-webkit-scrollbar {
