--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,7 @@
  {
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb) !important;
-} 
+}
 
 /* Chrome, Edge and Safari */
 /* *::-webkit-scrollbar {
@@ -104,14 +104,14 @@
 } */
 /* Define scrollbar track */
 ::-webkit-scrollbar {
-  width: 6px;
-  background-color: #333; /* Dark background color */
+  width: 1px;
+  background-color: #2c2c2c; /* Dark background color */
 }
 
 /* Define scrollbar thumb */
 ::-webkit-scrollbar-thumb {
   background-color: #00ff00; /* Neon green */
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 /* Define scrollbar thumb on hover */
