--- a/styles/globals.css
+++ b/styles/globals.css
@@ -273,3 +273,42 @@
   @apply toast-enter toast-enter-active toast-exit toast-exit-active;
   /* Add additional styles here if needed */
 }
+
+.scrollable-container {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+/* Only show grab cursor when content is scrollable */
+.scrollable-container.is-scrollable {
+  cursor: grab;
+}
+
+.scrollable-container.is-scrollable:active {
+  cursor: grabbing;
+}
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.3) transparent;
+  -webkit-overflow-scrolling: touch;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  height: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
