--- a/styles/globals.css
+++ b/styles/globals.css
@@ -363,3 +363,25 @@
 .animate-gradient {
   animation: gradient 15s ease infinite;
 }
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.15);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.animate-heartbeat {
+  animation: heartbeat 4.444s ease-in-out infinite;
+}
