--- a/styles/globals.css
+++ b/styles/globals.css
@@ -385,3 +385,11 @@
 .animate-heartbeat {
   animation: heartbeat 4.444s ease-in-out infinite;
 }
+
+@layer utilities {
+  .transition-colors {
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+}
